feature: Обновлена логика работы логов + добавлены новые (детальные) логи